Prevent image stretching (fix #21)

--- a/src/styles.css
+++ b/src/styles.css
@@ -92,3 +92,7 @@ body {
 .markdown a:hover {
     color: blue;
 }
+
+.object-cover {
+    object-fit: cover;
+}
